# WhyLab

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  README_ANON.md  __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  _diag.json  _not-found.html  _not-found.txt  check_keys.py  dashboard.html  index.html  index.txt  pyproject.toml  remotes.txt  requirements-dev.txt  setup.py
.gemini/: settings.md
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
api/: agent_registry.py  crud.py  database.py  graph.py  log_rotation.py  main.py  models.py  schemas.py
dashboard/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.dashboard.__PAGE__.txt  __next.dashboard.txt  next.config.ts  package-lock.json  package.json  tailwind.config.ts
data/: grand_challenges.json  kg_state.json  lalonde_test.csv  latest.json  scenario_b.json  steam_test.csv  test_steam.csv
docs/: causal_assumptions.md
engine/: config.py  orchestrator.py  pipeline.py  requirements.txt
experiments/: __init__.py  adaptive_audit_layer.py  condition_aware_analysis.py  config.yaml  docker_swebench_design.md  e10_simple_baselines.py  e1_drift_detection.py  e2_figures.py  e2_sensitivity_filter.py  e4_agent_benchmark.py  e5_multi_llm.py  e5_swebench_benchmark.py  e7_gemini_benchmark.py  e7v2_3way_analysis.py  e7v2_adversarial_benchmark.py  e7v2_bootstrap_ci.py  e7v2_diagnosis.py  e9_llm_phase_multi.py  e9_phase_diagram.py  llm_providers.py  proxy_validation.py  sahoo_baseline.py  swebench_loader.py
paper/: main.aux  main.bbl  main.blg  main.tex  references.bib
scripts/: analysis_result.txt  analyze_performance.py  check_connection.py  check_status.py  check_system.py  deploy_v3.ps1  evaluate_dav.py  generate_figures.py  generate_paper_plots.py  reproduce_revision.py  run_autocycle.py  run_benchmark.py  run_full_benchmark.py  save_lalonde_csv.py  test_data_cell.py  validate_real_world.py  verify_e2e_cycle.py  zenodo_update_v2.py  zenodo_upload.py
tests/: test_agents.py  test_agents_unit.py  test_audit.py  test_connectors.py  test_deep_cate.py  test_discovery_auto.py  test_dose_response.py  test_e2e_sprint5.py  test_fairness_audit.py  test_feedback.py  test_integration.py  test_llm_debate.py  test_mac_discovery.py  test_methods.py  test_monitoring.py  test_phase11.py  test_sensitivity.py  test_tool_debate.py  test_workflow.py
whylab/: __init__.py  (+1 more)
(+130 files in other folders)
