[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whylab"
version = "1.0.0"
description = "Causal Decision Intelligence Engine with Multi-Agent Debate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "WhyLab Contributors"},
]
keywords = ["causal-inference", "decision-intelligence", "machine-learning", "ai-agents", "double-machine-learning", "roi-simulator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "econml>=0.14",
    "lightgbm>=4.0",
    "duckdb>=0.9",
    "shap>=0.42",
    "networkx>=3.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
gpu = ["lightgbm[gpu]", "torch>=2.0"]
dashboard = ["fastapi", "uvicorn", "websockets"]
rag = ["chromadb>=0.4", "sentence-transformers>=2.2", "google-generativeai>=0.3"]
mcp = ["mcp>=1.0"]
sql = ["sqlalchemy>=2.0", "pymysql>=1.1", "psycopg2-binary>=2.9"]
bigquery = ["google-cloud-bigquery>=3.0", "pandas-gbq>=0.19"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["whylab[gpu,dashboard,rag,mcp,sql,bigquery,dev]"]

[project.scripts]
whylab = "engine.pipeline:main"

[project.urls]
Homepage = "https://github.com/Yesol-Pilot/WhyLab"
Repository = "https://github.com/Yesol-Pilot/WhyLab"
Issues = "https://github.com/Yesol-Pilot/WhyLab/issues"

[tool.hatch.build.targets.wheel]
packages = ["engine", "whylab"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv/",
    ".git/",
    ".github/",
    ".agent/",
    ".gemini/",
    ".pytest_cache/",
    "__pycache__/",
    "node_modules/",
    "dashboard/.next/",
    "dashboard/out/",
    "dashboard/node_modules/",
    "dist/",
    "uploads/",
    "logs/",
    "*.db",
    "*.db-journal",
    "*.pyc",
    "*.egg-info/",
    "_diag.json",
    "*.tar.gz",
    "*.whl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
